QRLO-12: TechDebt | Migrate to Spring 5.x with WebFlux

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 # Server Configuration
 server.port=3000
+server.api.version=v1
+server.path.global-prefix=/api
+server.error.includeStacktrace=ALWAYS
+logging.level.root=INFO
 
 # Security Configuration
+security.basic.enabled=false
 qrlo.security.keystore.file=qrlo-keystore.jks
 qrlo.security.keystore.password=yiZ@oMYch8cgowr7KgrPmQ_B
 qrlo.security.jwt.alias=qrlo-auth-root-ca
 qrlo.security.jwt.sk.password=kkYPp-xRyv3bR-DBAw2TA@wZ
-qrlo.security.jwt.duration=PT15m
+qrlo.security.jwt.duration=PT10s
 
 # MongoDB Configuration
 spring.data.mongodb.host=127.0.0.1
