--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ qrlo.security.keystore.file=qrlo-keystore.jks
 qrlo.security.keystore.password=yiZ@oMYch8cgowr7KgrPmQ_B
 qrlo.security.jwt.alias=qrlo-auth-root-ca
 qrlo.security.jwt.sk.password=kkYPp-xRyv3bR-DBAw2TA@wZ
-qrlo.security.jwt.duration=PT10s
+qrlo.security.jwt.duration=PT30m
 
 # MongoDB Configuration
 spring.data.mongodb.host=127.0.0.1
