QRLO-9: QRCode | User | Business card creation based on basic user information

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'org.bouncycastle:bcprov-jdk15on:1.68'
+	implementation 'com.googlecode.ez-vcard:ez-vcard:0.11.2'
 }
 
 test {
