QRLO-17: Auth | Implement Email Verification for OAuth Integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,11 @@ qrlo.security.keystore.file=qrlo-keystore.jks
 qrlo.security.keystore.password=yiZ@oMYch8cgowr7KgrPmQ_B
 qrlo.security.jwt.alias=qrlo-auth-root-ca
 qrlo.security.jwt.sk.password=kkYPp-xRyv3bR-DBAw2TA@wZ
+qrlo.security.jwt.issuer=qrlo-service
 qrlo.security.jwt.duration=PT1h
 
 # VCard Configuration
-qrlo.vcard.businesscard.uri.property-name=qbcu
+qrlo.vcard.businesscard.uri.property-name=QBCU
 
 # MongoDB Configuration
 spring.data.mongodb.host=127.0.0.1
@@ -26,3 +27,17 @@ spring.data.mongodb.database=qrlo-service-core
 
 # Kakao OAuth Configuration
 kakao.oauth.api.version=v1
+
+# Email Configuration
+spring.mail.host=${SMTP_HOST}
+spring.mail.port=${SMTP_PORT}
+spring.mail.username=${SMTP_USERNAME}
+spring.mail.password=${SMTP_PASSWORD}
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
