--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,13 +17,21 @@ qrlo.security.jwt.duration=PT1h
 # VCard Configuration
 qrlo.vcard.businesscard.uri.property-name=QBCU
 
-# MongoDB Configuration
-spring.data.mongodb.host=127.0.0.1
-spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=qrloAdmin
-spring.data.mongodb.password=Admin123Admin123
-spring.data.mongodb.database=qrlo-service-core
+# Database Config
+qrlo.database.url=postgresql://localhost:5432/qrlo_service_core
+
+spring.r2dbc.url=r2dbc:${qrlo.database.url}
+spring.r2dbc.username=qrlo_admin
+spring.r2dbc.password=Admin123Admin123
+spring.r2dbc.pool.enabled=true
+spring.r2dbc.pool.initialSize=3
+spring.r2dbc.pool.maxSize=50
+spring.r2dbc.pool.max-idle-time=30m
+logging.level.org.springframework.r2dbc=DEBUG
+
+r2dbc.migrate.enable=true
+r2dbc.migrate.acquire-lock-max-retries=5
+r2dbc.migrate.resources-paths=classpath:/db/migration/*.sql
 
 # Kakao OAuth Configuration
 kakao.oauth.api.version=v1
