--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'name.nkonev.r2dbc-migrate:r2dbc-migrate-spring-boot-starter:1.6.1'
+	implementation 'io.projectreactor.tools:blockhound:1.0.6.RELEASE'
 
 	implementation 'io.r2dbc:r2dbc-postgresql'
 	implementation 'com.auth0:java-jwt:3.15.0'
