--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,8 @@ qrlo.security.jwt.issuer=qrlo-service
 qrlo.security.jwt.duration=PT1h
 
 # VCard Configuration
-qrlo.vcard.businesscard.uri.property-name=QBCU
+qrlo.vcard.businesscard.id.property-name=QBCUID
+qrlo.vcard.businesscard.userId.property-name=QBCID
 
 # Database Config
 qrlo.database.url=postgresql://localhost:5432/qrlo_service_core
