QRLO-45: Send base64 json business card vcard data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ qrlo.security.jwt.duration=PT1h
 # VCard Configuration
 qrlo.vcard.businesscard.id.property-name=QBCUID
 qrlo.vcard.businesscard.userId.property-name=QBCID
+qrlo.vcard.businesscard.property-name=QBCD
 
 # Database Config
 qrlo.database.url=postgresql://localhost:5432/qrlo_service_core
